--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="json_btn_special">特殊Json数据解析</string>
     <string name="json_txt_original">原始数据</string>
     <string name="json_txt_last">转换后的数据</string>
+    <string name="launcer_txt_description">Android世界。。。</string>
 </resources>
