【尚硅谷】【第六讲：xUtils3注解框架】【在 Fragment 中使用注解初始化布局】

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="xutils3_btn_image_list">xUtils3加载列表图片</string>
     <!--FragmentXutils3Activity-->
     <string name="xutils3fragment_txt_title_name">在Fragment中使用注解</string>
+    <string name="xutils3_btn_fragment">Fragment的按钮</string>
 </resources>
