--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="net_txt_display">显示结果：</string>
     <!--XUtilsNetActivity-->
     <string name="xutils3_net_title_name">xUtils网络模块</string>
+    <!--GlideActivity-->
+    <string name="glide_txt_title_name">Glide</string>
+    <string name="glide_btn_base_use">基本使用方法</string>
+    <string name="glide_btn_recyclerview">ListView中加载网络图片</string>
+    <string name="glide_btn_tranfromtations">图片变换</string>
 </resources>
