--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,10 @@
     <string name="glide_btn_base_use">基本使用方法</string>
     <string name="glide_btn_recyclerview">ListView中加载网络图片</string>
     <string name="glide_btn_tranfromtations">图片变换</string>
+    <!--ButterknifeActivity-->
+    <string name="butterknife_txt_title">Butterknife</string>
+    <string name="butterknife_text_default">这边是文本展示区域</string>
+    <string name="butterknife_text_set">这个是Butterknife的使用讲解页面</string>
+    <string name="butterknife_cb_name">Checkbox</string>
+    <string name="butterknife_button">这是一个按钮</string>
 </resources>
